assets/style/components/main/_nav.scss
.nav-main {
	height          : 60px;
    width           : 100%;
    background-color: white;
   
    @include breakpoint(large) {
        height: 100px;
    }

    #nav-state {
        display: none;
    }

    #nav-state:checked ~ .mobile .nav-toggle {
        position: fixed;
        
        b {
            background: transparent;
            
            &:before {
                transform: translate(0, 0) rotate(45deg);
            }
            
            &:after {
                transform: translate(0, 0) rotate(-45deg);
            }
        }
    }

    .mobile {
        height: 100%;
        padding: 0 $padding;
        
        @include flex;
        @include flex-align($x: space-between, $y: middle);

        @include breakpoint(large) {
            height: 0;
        }

        .title {
            display: block;
            text-align: center;
            
            @include breakpoint(large) {
                display: none;
            }
        }
    
        .nav-toggle {
            width: 26px;
            height: 20px;
            position: absolute;
            z-index: 15;
            cursor: pointer;
            padding: 9px 0;
            right: $padding;
            
            @include breakpoint(large) {
                display: none;
            }

            b {
                height: 2px;
                background: #ccc;
                display: block;
                position: relative;
                transition: background .2s;

                &:before, &:after {
                    content: "";
                    display: block;
                    position: absolute;
                    width: 100%;
                    height: 100%;
                    background: #ccc;
                    top: 0;
                    transform-origin: center center;
                    transform: translate(0, -9px);
                    transition: transform .4s ease;
                }
                &:after {
                    transform: translate(0, 9px);
                }
            }
        }
    }

    #nav-state:checked ~ .menu {
        @include flex;
    }

    .menu {
        @include flex-grid-row();
        @include flex-direction(column);
        @include flex-align($x: space-between, $y: middle);

        padding: 2rem;
        display: none;
        position: fixed;
        background-color: #1e1e23;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        z-index: 10;

        a {
            color: #ffffff;
            display: inline-block;
            white-space: nowrap;
            padding: 0 .5rem;

            &:first-child {
                padding-left: 0;
            }

            &:last-child {
                padding-right: 0;
            }
        }

        nav {
            @include flex;
            @include flex-align($y: middle);
            @include flex-direction(column);
        }
        
        @include breakpoint(large) {
            @include flex;
            @include flex-direction(row);
            background: none;
            position: static;
            padding: 0 $padding;
            height: 100px;
            
            h2, a {
                color: #000000;
            }
                
            nav {
                @include flex-direction(row);
            }
        }

    }
}

